--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.1.5",
-    "@nuxtjs/apollo": "^5.0.0-alpha.7",
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/apollo": "^5.0.0-alpha.14",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-    "nuxt": "^3.9.0",
-    "nuxt-icon": "^0.5.0"
+    "nuxt": "^3.8.2",
+    "nuxt-icon": "^0.6.8"
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0-rc.3",
     "@pinia/nuxt": "^0.5.1",
+    "@vue/apollo-composable": "^4.0.2",
     "pinia": "^2.1.7",
     "vue-router": "^4.2.5"
   }
